[tool.poetry]
name = "backend-store"
version = "0.1.0"
description = "\"Backend de proyecto final PW\""
authors = ["kmilom <camilomoranav@unimagdalena.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
